--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "stylelint": "^14.16.0",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-property-sort-order-smacss": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "^4.6.4",
     "vite": "^4.0.1"
   },
